Remove test posts; replace with dumb joke

--- a/first/index.html
+++ b/first/index.html
@@ -53,7 +53,7 @@
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
     <header>
-        <h1 itemprop="headline">First post</h1>
+        <h1 itemprop="headline">Nothing here yet</h1>
         <span class="muted">
     <svg style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
@@ -61,7 +61,7 @@
         <circle cx="16" cy="16" r="14"/>
         <path d="M16 8 L16 16 20 20"/>
     </svg>
-    <span>0 minute read</span>
+    <span>1 minute read</span>
     <svg style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32"
          width="16" height="16" fill="none" stroke="currentcolor"
          stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%">
@@ -72,7 +72,9 @@
 </span>
     </header>
     <div itemprop="articleBody">
-      
+      <p>This is a freshly generated blog!</p>
+<p>This tree bears no fruit. Please forage for content elsewhere.</p>
+
     </div>
 
     
